--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "around-react",
+  "name": "react-round-auth",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://bdangel1.github.io/around_react"
+  "homepage": "https://github.com/bdangel1/react-around-auth"
 }
